fable/test/valid/main_cmn_indirect.f
      program main
      call sub_main()
      end

      subroutine sub_main
      write(6, '(a)') 'sub_main'
      end
