fable/test/syntax_error/sub_bad_trailing.f
      subroutine sub(a,b) x
      end
